# cudd

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  README.md  SCAN_BUILD_ANALYSIS.md  a-conftest.gcno  config.h  config.status  configure  cuddCheck.c.gcov  cuddTable.c.gcov  libtool  mtrGroup.c.gcov
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml  (+8 more)
_codeql_build_dir/: Makefile  cuddConfig.cmake
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
cmake/: config.h.in  cuddConfig.cmake.in  cudd_configure_system.cmake  install.cmake  unix.cmake  windows.cmake
cplusplus/: CMakeLists.txt  cuddObj.cc  cuddObj.hh  libobj_la-cuddObj.gcda  libobj_la-cuddObj.gcno  test.tst  testmulti  testmulti-testmulti.gcda  testmulti-testmulti.gcno  testobj  testobj-testobj.gcda  testobj-testobj.gcno
cudd/: Included.am  check.out  cudd.h  cuddCheck.c.gcov  cuddUtil.c  extra.tst  libcudd_la-cuddAPI.gcda  libcudd_la-cuddAPI.gcno  libcudd_la-cuddAddAbs.gcda  libcudd_la-cuddAddAbs.gcno  libcudd_la-cuddAddApply.gcda  libcudd_la-cuddAddApply.gcno  libcudd_la-cuddAddFind.gcda  libcudd_la-cuddAddFind.gcno  libcudd_la-cuddAddInv.gcda  libcudd_la-cuddAddInv.gcno  libcudd_la-cuddAddIte.gcda  libcudd_la-cuddAddIte.gcno  libcudd_la-cuddAddNeg.gcda  libcudd_la-cuddAddNeg.gcno  libcudd_la-cuddAddWalsh.gcda  libcudd_la-cuddAddWalsh.gcno  libcudd_la-cuddAndAbs.gcda  libcudd_la-cuddAndAbs.gcno  libcudd_la-cuddAnneal.gcda  libcudd_la-cuddAnneal.gcno  libcudd_la-cuddApa.gcda  libcudd_la-cuddApa.gcno  libcudd_la-cuddApprox.gcda  libcudd_la-cuddApprox.gcno  libcudd_la-cuddBddAbs.gcda  libcudd_la-cuddBddAbs.gcno  libcudd_la-cuddBddCorr.gcda  libcudd_la-cuddBddCorr.gcno  libcudd_la-cuddBddIte.gcda  libcudd_la-cuddBddIte.gcno  libcudd_la-cuddBridge.gcda  libcudd_la-cuddBridge.gcno  libcudd_la-cuddCache.gcda  libcudd_la-cuddCache.gcno  (+102 more)
dddmp/: CMakeLists.txt  libdddmp_la-dddmpBinary.gcda  libdddmp_la-dddmpBinary.gcno  libdddmp_la-dddmpConvert.gcno  libdddmp_la-dddmpDbg.gcno  libdddmp_la-dddmpLoad.gcda  libdddmp_la-dddmpLoad.gcno  libdddmp_la-dddmpLoadCnf.gcda  libdddmp_la-dddmpLoadCnf.gcno  libdddmp_la-dddmpNodeAdd.gcda  libdddmp_la-dddmpNodeAdd.gcno  libdddmp_la-dddmpNodeBdd.gcda  libdddmp_la-dddmpNodeBdd.gcno  libdddmp_la-dddmpNodeCnf.gcda  libdddmp_la-dddmpNodeCnf.gcno  libdddmp_la-dddmpStoreAdd.gcda  libdddmp_la-dddmpStoreAdd.gcno  libdddmp_la-dddmpStoreBdd.gcda  libdddmp_la-dddmpStoreBdd.gcno  libdddmp_la-dddmpStoreCnf.gcda  libdddmp_la-dddmpStoreCnf.gcno  libdddmp_la-dddmpStoreMisc.gcno  libdddmp_la-dddmpUtil.gcda  libdddmp_la-dddmpUtil.gcno  testdddmp  testdddmp-testdddmp.gcda  testdddmp-testdddmp.gcno
dddmp/.deps/: dddmp_testdddmp-testdddmp.Po
epd/: cudd_libcudd_la-epd.gcda  cudd_libcudd_la-epd.gcno
extras/dddmp/: CMakeLists.txt
extras/dddmp/include/cudd/: dddmp.h
extras/dddmp/src/: dddmpInt.h
extras/nanotrav/: CMakeLists.txt  README.md
extras/nanotrav/src/: bnet.c  bnet.h  main.c  ntr.c  ntr.h  ntrBddTest.c  ntrShort.c  ntrZddTest.c
extras/nanotrav/tests/: CMakeLists.txt
mtr/: cudd_libcudd_la-mtrBasic.gcda  cudd_libcudd_la-mtrBasic.gcno  cudd_libcudd_la-mtrGroup.gcda  cudd_libcudd_la-mtrGroup.gcno  test.tst  testmtr  testmtr-testmtr.gcda  testmtr-testmtr.gcno
nanotrav/: C17.tst  C880.tst  CMakeLists.txt  adj49.tst  closest.tst  ham01.tst  miniFirst.tst  mult32a.tst  nanotrav  nanotrav-bnet.gcda  nanotrav-bnet.gcno  nanotrav-chkMterm.gcda  nanotrav-chkMterm.gcno  nanotrav-main.gcda  nanotrav-main.gcno  nanotrav-ntr.gcda  nanotrav-ntr.gcno  nanotrav-ntrBddTest.gcda  nanotrav-ntrBddTest.gcno  nanotrav-ntrHeap.gcda  nanotrav-ntrHeap.gcno  nanotrav-ntrMflow.gcda  nanotrav-ntrMflow.gcno  nanotrav-ntrShort.gcda  nanotrav-ntrShort.gcno  nanotrav-ntrZddTest.gcda  nanotrav-ntrZddTest.gcno  rcn25.tst  s27.tst  s27b.tst  s27c.tst  s382.tst  s641.tst
nanotrav/.deps/: nanotrav_nanotrav-bnet.Po  nanotrav_nanotrav-chkMterm.Po  nanotrav_nanotrav-main.Po  nanotrav_nanotrav-ntr.Po  nanotrav_nanotrav-ntrBddTest.Po  nanotrav_nanotrav-ntrHeap.Po  nanotrav_nanotrav-ntrMflow.Po  nanotrav_nanotrav-ntrShort.Po  nanotrav_nanotrav-ntrZddTest.Po
src/: config.h  cstringstream.c  cudd.cpp  cuddDecomp.c  cuddExact.c  cuddGenCof.c  cuddGenetic.c  cuddHarwell.c  cuddInt.h  cuddLinear.c  cuddObj.cc  cuddTable.c  cuddZddGroup.c  mtrGroup.c  st.c
st/: cudd_libcudd_la-st.gcda  cudd_libcudd_la-st.gcno  testst  testst-testst.gcda  testst-testst.gcno
tests/: CMakeLists.txt  cpu_stats.test.cpp  cpu_time.test.cpp  cstringstream.test.cpp  cuddAPI.test.cpp  cuddAddAbs.test.cpp  cuddAddApply.test.cpp  cuddAddFind.test.cpp  cuddAddInv.test.cpp  cuddAddIte.test.cpp  cuddAddNeg.test.cpp  cuddAddWalsh.test.cpp  cuddAndAbs.test.cpp  cuddAnneal.test.cpp  cuddApa.test.cpp  cuddApprox.test.cpp  cuddBddAbs.test.cpp  cuddBddCorr.test.cpp  cuddBddIte.test.cpp  cuddBridge.test.cpp  cuddCache.test.cpp  cuddCheck.test.cpp  cuddClip.test.cpp  cuddCof.test.cpp  cuddCompose.test.cpp  cuddDecomp.test.cpp  cuddEssent.test.cpp  cuddExact.test.cpp  cuddExport.test.cpp  cuddGenCof.test.cpp  cuddGenetic.test.cpp  cuddGroup.test.cpp  cuddHarwell.test.cpp  cuddInit.test.cpp  cuddInteract.test.cpp  cuddLCache.test.cpp  cuddLevelQ.test.cpp  cuddLinear.test.cpp  cuddLiteral.test.cpp  cuddMatMult.test.cpp  (+39 more)
tests/cplusplus/: testmulti.cc
tests/cudd/: testcudd.c  testextra.c
tests/legacy/cplusplus/: testmulti.cc  testobj.cc
tests/legacy/cudd/: testcudd.c  testextra.c
tests/mtr/: testmtr.c
tests/st/: testst.c
util/: cudd_libcudd_la-cpu_stats.gcda  cudd_libcudd_la-cpu_stats.gcno  cudd_libcudd_la-cpu_time.gcda  cudd_libcudd_la-cpu_time.gcno  cudd_libcudd_la-cstringstream.gcda  cudd_libcudd_la-cstringstream.gcno  cudd_libcudd_la-datalimit.gcda  cudd_libcudd_la-datalimit.gcno  cudd_libcudd_la-pathsearch.gcno  cudd_libcudd_la-pipefork.gcno  cudd_libcudd_la-prtime.gcda  cudd_libcudd_la-prtime.gcno  cudd_libcudd_la-safe_mem.gcda  cudd_libcudd_la-safe_mem.gcno  cudd_libcudd_la-strsav.gcda  cudd_libcudd_la-strsav.gcno  cudd_libcudd_la-texpand.gcno  cudd_libcudd_la-ucbqsort.gcda  cudd_libcudd_la-ucbqsort.gcno
(+92 files in other folders)
