set(DDDMP_PUBLIC_HEADERS
"${CMAKE_CURRENT_SOURCE_DIR}/dddmp.h"
)

set(DDDMP_SOURCES
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpInt.h"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpBinary.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpNodeAdd.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpStoreCnf.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpConvert.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpNodeBdd.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpStoreMisc.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpDbg.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpNodeCnf.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpUtil.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpLoad.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpStoreAdd.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpLoadCnf.c"
"${CMAKE_CURRENT_SOURCE_DIR}/dddmpStoreBdd.c"
)

add_library(dddmp ${DDDMP_SOURCES})

target_include_directories(dddmp PUBLIC
  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/cudd>
  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/epd>
  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/mtr>
  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/st>
  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/util>
  $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/dddmp>
  $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
  $<INSTALL_INTERFACE:include/cudd>
)

set_target_properties(cudd PROPERTIES
  VERSION ${PROJECT_VERSION}
  SOVERSION ${PROJECT_VERSION_MAJOR}
  POSITION_INDEPENDENT_CODE ON
  CXX_VISIBILITY_PRESET hidden
  VISIBILITY_INLINES_HIDDEN ON
  PUBLIC_HEADER "${DDDMP_PUBLIC_HEADERS}"
)

install(TARGETS dddmp
  EXPORT cuddTargets
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Runtime 
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/cudd COMPONENT Development
)